# AlgoForge

./: .gitignore  PR_COMPARE_TEST.md  PR_COMPARE_TEST_B.md  README.md
Backend/AlgoForge/: Cargo.toml
Backend/AlgoForge/migrations/: 20260222053017_create_users_table.sql  20260223191557_create_users_table.sql
Backend/AlgoForge/src/: auth.rs  handlers.rs  main.rs
Backend/AlgoForge/src/cardinal_scenarios/: jwt_fallback_secret.rs  missing_admin_authz.rs  missing_await_write.ts  n_plus_one_list.rs  plaintext_reset_token.rs  refactor_clean_baseline.rs  sql_interpolation.rs  tls_verification_disabled.ts  unsafe_object_merge.ts
Frontend/algoforge/: README.md  authConfig.ts  package-lock.json  package.json
Frontend/algoforge/app/: buggyDivide.ts  globals.css  layout.tsx  page.tsx  tinyTest.ts
Frontend/algoforge/app/cardinal-scenarios/: unsafe-render.tsx
Frontend/algoforge/app/homepage/: curriculum-data.ts  main.tsx  shared-level-styles.css
Frontend/algoforge/app/login/: actions.ts  login.css  login.styles.css  login.tsx
Frontend/algoforge/app/profile/: actions.ts  page.tsx  profile.css
Frontend/algoforge/githubCardinalTest/: cardinal.tsx  main.tsx  page.tsx
Frontend/algoforge/mediumTest/: auth.ts  index.ts  user.ts  utils.ts
docs/: cardinal-pr-test-matrix.md  cardinal-pr-test-scenario-c.md
security-fixtures/: REVIEW_ME.md  proposed-admin-notes.ts  proposed-ai-webhook.ts  proposed-download-token.ts  proposed-profile-preview.rs  proposed-reset-link.ts  proposed-sso-callback.ts  proposed-support-override.ts  proposed-user-export.ts
(+67 files in other folders)
