[package]
name = "AlgoForge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "migrate", "uuid"] }
tokio = { version = "1", features = ["full"]}
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
tower-http = { version = "0.6", features = ["cors"] }
bcrypt = "0.16"
jsonwebtoken = "9.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }